--- a/my website creation/R3LAMP-Official-site-sample/scss/main.css
+++ b/my website creation/R3LAMP-Official-site-sample/scss/main.css
@@ -35,21 +35,21 @@
   --container-color: #fff;
   /*========== Font and typography ==========*/
   /*.5rem = 8px | 1rem = 16px ...*/
-  --body-font: 'Poppins', sans-serif;
+  --body-font: "Poppins", sans-serif;
   --biggest-font-size: 1.5rem;
   --h1-font-size: 1.5rem;
   --h2-font-size: 1.25rem;
   --h3-font-size: 1rem;
-  --normal-font-size: .938rem;
-  --small-font-size: .813rem;
-  --smaller-font-size: .75rem;
+  --normal-font-size: 0.938rem;
+  --small-font-size: 0.813rem;
+  --smaller-font-size: 0.75rem;
   /*========== Font weight ==========*/
   --font-medium: 500;
   --font-semi-bold: 600;
   /*========== Margenes Bottom ==========*/
   /*.5rem = 8px | 1rem = 16px ...*/
-  --mb-0-25: .25rem;
-  --mb-0-5: .5rem;
+  --mb-0-25: 0.25rem;
+  --mb-0-5: 0.5rem;
   --mb-1: 1rem;
   --mb-1-5: 1.5rem;
   --mb-2: 2rem;
@@ -67,8 +67,8 @@
     --h2-font-size: 1.5rem;
     --h3-font-size: 1.25rem;
     --normal-font-size: 1rem;
-    --small-font-size: .875rem;
-    --smaller-font-size: .813rem;
+    --small-font-size: 0.875rem;
+    --smaller-font-size: 0.813rem;
   }
 }
 
@@ -87,8 +87,9 @@ body {
   margin: var(--header-height) 0 0 0;
   background-color: var(--body-color);
   color: var(--text-color);
-  -webkit-transition: .4s;
-  transition: .4s;
+  line-height: 1.6;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
   /*For animation dark mode*/
 }
 
@@ -100,7 +101,10 @@ input {
   color: var(--text-color);
 }
 
-h1, h2, h3, h4 {
+h1,
+h2,
+h3,
+h4 {
   color: var(--title-color);
   font-size: var(--font-semi-bold);
 }
@@ -140,7 +144,7 @@ button {
   border-radius: 25px;
   background-color: var(--first-color);
   margin-bottom: var(--mb-2);
-  margin-top: .5em;
+  margin-top: 0.5em;
 }
 
 .section {
@@ -158,8 +162,8 @@ button {
   top: 0;
   left: 0;
   z-index: var(--z-fixed);
-  -webkit-transition: .4s;
-  transition: .4s;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
   color: #222;
 }
 
@@ -169,7 +173,8 @@ button {
           box-shadow: 0 2px 5px rgba(0, 0, 0, 0.4);
 }
 
-.active_nav .nav__logo, .active_nav .nav__link {
+.active_nav .nav__logo,
+.active_nav .nav__link {
   color: #222;
 }
 
@@ -216,8 +221,8 @@ button {
 .nav__link {
   color: #fff;
   font-weight: var(--font-medium);
-  -webkit-transition: .3s;
-  transition: .3s;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
   font-size: var(--small-font-size);
 }
 
@@ -232,7 +237,7 @@ button {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  gap: .5em;
+  gap: 0.5em;
   color: #fff;
   font-weight: var(--font-semi-bold);
 }
@@ -268,7 +273,7 @@ button {
 
 .home__data p {
   font-size: var(--normal-font-size);
-  margin-bottom: var(--mb-1);
+  margin-bottom: var(--mb-2);
   padding: 2rem;
   color: #e4e1e1;
   font-weight: lighter;
@@ -277,13 +282,13 @@ button {
 .home__data a {
   color: #fff;
   background: var(--first-color-alt);
-  padding: .5em 1.5em;
+  padding: 0.5em 1.5em;
   border-radius: 25px;
   font-weight: var(--font-semi-bold);
 }
 
 .home__data a .bx {
-  margin-left: .5em;
+  margin-left: 0.5em;
 }
 
 .home__container {
@@ -329,6 +334,15 @@ button {
   padding-left: 1rem;
 }
 
+.features__container ul li::before {
+  content: "\2022";
+  color: var(--first-color-alt);
+  font-weight: bold;
+  display: inline-block;
+  width: 1em;
+  margin-left: -1em;
+}
+
 .download {
   margin-bottom: var(--mb-2-5);
 }
@@ -344,7 +358,7 @@ button {
       -ms-flex-align: center;
           align-items: center;
   align-items: center;
-  border-radius: .5em;
+  border-radius: 0.5em;
   background-image: radial-gradient(circle at 17% 77%, rgba(17, 17, 17, 0.04) 0%, rgba(17, 17, 17, 0.04) 50%, rgba(197, 197, 197, 0.04) 50%, rgba(197, 197, 197, 0.04) 100%), radial-gradient(circle at 26% 17%, rgba(64, 64, 64, 0.04) 0%, rgba(64, 64, 64, 0.04) 50%, rgba(244, 244, 244, 0.04) 50%, rgba(244, 244, 244, 0.04) 100%), radial-gradient(circle at 44% 60%, rgba(177, 177, 177, 0.04) 0%, rgba(177, 177, 177, 0.04) 50%, rgba(187, 187, 187, 0.04) 50%, rgba(187, 187, 187, 0.04) 100%), linear-gradient(19deg, #1c75fa, #22029f);
   padding: 2em;
 }
@@ -379,8 +393,8 @@ button {
 
 .download__details button {
   width: 50%;
-  padding: .5em;
-  border-radius: .5em;
+  padding: 0.5em;
+  border-radius: 0.5em;
   color: #fff;
 }
 
@@ -409,8 +423,8 @@ details .contents ol {
 }
 
 details[open] summary ~ * {
-  -webkit-animation: sweep .5s ease-in-out;
-          animation: sweep .5s ease-in-out;
+  -webkit-animation: sweep 0.5s ease-in-out;
+          animation: sweep 0.5s ease-in-out;
 }
 
 summary {
@@ -434,8 +448,8 @@ summary {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-transition: .5s all;
-  transition: .5s all;
+  -webkit-transition: 0.5s all;
+  transition: 0.5s all;
 }
 
 .instruct__thead {
@@ -444,13 +458,13 @@ summary {
   display: flex;
   gap: 1em;
   margin-bottom: var(--mb-1);
-  -webkit-transition: .5s all;
-  transition: .5s all;
+  -webkit-transition: 0.5s all;
+  transition: 0.5s all;
 }
 
 .instruct__toggle {
   color: #222;
-  padding: .4em 1em;
+  padding: 0.4em 1em;
   border-radius: 25px;
   background-color: none;
   font-weight: var(--font-semi-bold);
@@ -555,13 +569,16 @@ summary {
   bottom: 2em;
   width: 15%;
   z-index: -1;
-  opacity: .2;
+  opacity: 0.2;
 }
 
 .copyrights {
   padding: 1em;
   text-align: center;
   font-size: var(--small-font-size);
+  background-color: #222;
+  color: #fff;
+  margin-top: 2em;
 }
 
 @media screen and (max-width: 768px) {
@@ -574,8 +591,8 @@ summary {
     padding: 4rem 0;
     -webkit-box-shadow: 0 1px 4px rgba(40, 37, 37, 0.1);
             box-shadow: 0 1px 4px rgba(40, 37, 37, 0.1);
-    -webkit-transition: .4s;
-    transition: .4s;
+    -webkit-transition: 0.4s;
+    transition: 0.4s;
   }
   .features__container:nth-child(2) .features__container__imgcon {
     background: red;
@@ -683,8 +700,7 @@ summary {
   .home__imgcontainer img {
     width: 70%;
   }
-  .home__container
-.celebrate__container,
+  .home__container .celebrate__container,
   .message__container,
   .features__container {
     -ms-grid-columns: (1fr)[2];
@@ -717,7 +733,7 @@ summary {
       -ms-flex-pack: center;
           justify-content: center;
   width: 40px;
-  border-radius: .5em;
+  border-radius: 0.5em;
   background-color: var(--first-color);
   color: #fff;
   height: 40px;
