--- a/my website creation/R3LAMP-Official-site-sample/scss/main.scss
+++ b/my website creation/R3LAMP-Official-site-sample/scss/main.scss
@@ -423,6 +423,8 @@ summary {
       }
       p {
          font-size: var(--normal-font-size);
+         line-height: 1.5em;
+         word-spacing: .16em;
       }
    }
 }
