--- a/my website creation/gaming/css/main.css
+++ b/my website creation/gaming/css/main.css
@@ -14,7 +14,7 @@
   --body-color: hsl(244, 47%, 13%);
   /*========== Font and typography ==========*/
   /*.5rem = 8px | 1rem = 16px ...*/
-  --body-font: "Poppins", sans-serif;
+  --body-font: "lato", sans-serif;
   --biggest-font-size: 1.5rem;
   --h1-font-size: 1.5rem;
   --h2-font-size: 1.25rem;
@@ -74,6 +74,7 @@ body {
   color: var(--text-color);
   -webkit-transition: 0.4s;
   transition: 0.4s;
+  font-family: var(--body-font);
 }
 
 h1,
