add classroom and movie

--- a/my website creation/R3LAMP-Official-site-sample/scss/main.css
+++ b/my website creation/R3LAMP-Official-site-sample/scss/main.css
@@ -508,7 +508,7 @@ summary {
 .instruct__details p {
   font-size: var(--normal-font-size);
   line-height: 1.5em;
-  word-spacing: .16em;
+  word-spacing: 0.16em;
 }
 
 .faq {
@@ -723,6 +723,7 @@ summary {
 }
 
 .navbottom {
+  display: none;
   position: fixed;
   bottom: 2em;
   display: -webkit-box;
