--- a/my website creation/Portfolio/scss/detail.scss
+++ b/my website creation/Portfolio/scss/detail.scss
@@ -13,43 +13,74 @@ html {
    //    rgba(35, 34, 66, 1) 100%
    // );
    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    -ms-overflow-style: scrollbar;
-    font-size: 62.5%;
-    -webkit-text-size-adjust: 100%;
+   -moz-osx-font-smoothing: grayscale;
+   -ms-overflow-style: scrollbar;
+   font-size: 62.5%;
+   -webkit-text-size-adjust: 100%;
 }
 
-body{
-      font-family: 'Circular Std Book', Arial, Helvetica, sans-serif;
-      font-size: 1.6rem;
-      min-height: 100vh;
-      overflow-x: hidden;
-      line-height: 1.6;
-      color: #474747;
-      background-image: linear-gradient(33deg, transparent 0%, transparent 8%,rgba(9, 9, 9,0.02) 8%, rgba(9, 9, 9,0.02) 59%,transparent 59%, transparent 100%),linear-gradient(234deg, transparent 0%, transparent 32%,rgba(225, 225, 225,0.02) 32%, rgba(225, 225, 225,0.02) 99%,transparent 99%, transparent 100%),linear-gradient(312deg, transparent 0%, transparent 24%,rgba(93, 93, 93,0.02) 24%, rgba(93, 93, 93,0.02) 58%,transparent 58%, transparent 100%),linear-gradient(90deg, rgb(255,255,255),rgb(255,255,255));
+body {
+   font-family: "Circular Std Book", Arial, Helvetica, sans-serif;
+   font-size: 1.6rem;
+   min-height: 100vh;
+   overflow-x: hidden;
+   line-height: 1.6;
+   color: #474747;
+   background-image: linear-gradient(
+         33deg,
+         transparent 0%,
+         transparent 8%,
+         rgba(9, 9, 9, 0.02) 8%,
+         rgba(9, 9, 9, 0.02) 59%,
+         transparent 59%,
+         transparent 100%
+      ),
+      linear-gradient(
+         234deg,
+         transparent 0%,
+         transparent 32%,
+         rgba(225, 225, 225, 0.02) 32%,
+         rgba(225, 225, 225, 0.02) 99%,
+         transparent 99%,
+         transparent 100%
+      ),
+      linear-gradient(
+         312deg,
+         transparent 0%,
+         transparent 24%,
+         rgba(93, 93, 93, 0.02) 24%,
+         rgba(93, 93, 93, 0.02) 58%,
+         transparent 58%,
+         transparent 100%
+      ),
+      linear-gradient(90deg, rgb(255, 255, 255), rgb(255, 255, 255));
 }
 
 body:before {
-    width: 0;
-    z-index: 9999;
-    transition: all .5s cubic-bezier(.77,0,.175,1);
+   width: 0;
+   z-index: 9999;
+   transition: all 0.5s cubic-bezier(0.77, 0, 0.175, 1);
 }
 
-
-.container{
+.container {
    max-width: 1200px;
    width: 90%;
    margin: 0 auto;
 }
 
-li{ list-style: none;}
-a{ text-decoration:  none; color: #474747; }
+li {
+   list-style: none;
+}
+a {
+   text-decoration: none;
+   color: #474747;
+}
 
-header{
+header {
    width: 100%;
    position: fixed;
    top: 0;
-   nav{
+   nav {
       max-width: 1000px;
       height: 10vh;
       width: 90%;
@@ -57,28 +88,28 @@ header{
       display: flex;
       align-items: center;
       justify-content: space-between;
-      .brand{
+      .brand {
          font-weight: 600;
       }
-      a{
+      a {
          text-decoration: none;
          color: #474747;
          font-size: 18px;
       }
-      ul{
+      ul {
          display: flex;
          align-items: center;
-         li{
+         li {
             margin-right: 1.5em;
-            button{
+            button {
                background-color: hsl(270, 57%, 51%);
-               padding: .5em 1em;
-               color:  #fff;
-               border-radius: .5em;
+               padding: 0.5em 1em;
+               color: #fff;
+               border-radius: 0.5em;
                border: none;
-               font-family: 'Circular Std Book', Arial, Helvetica, sans-serif;
+               font-family: "Circular Std Book", Arial, Helvetica, sans-serif;
             }
-            i{
+            i {
                font-size: 2.5rem;
             }
          }
@@ -86,25 +117,21 @@ header{
    }
 }
 
-
-main{
+main {
    position: relative;
    display: flex;
    align-items: center;
    min-height: 100vh;
    overflow: hidden;
-   
 
-
-      
-   h2{
+   h2 {
       width: 70%;
       font-size: 40px;
       line-height: 1.4;
       font-weight: bold;
       // font-family: 'Poppins';
    }
-   p{
+   p {
       width: 45%;
       margin-top: 2.5em;
       line-height: 1.8;
@@ -113,18 +140,16 @@ main{
       // font-family: 'Poppins';
    }
 
-   span{
+   span {
       position: absolute;
       bottom: 0;
       right: 1em;
       font-size: 10rem;
       font-weight: bold;
    }
-
-   
 }
 
-.sidebar{
+.sidebar {
    width: 80px;
    height: 100vh;
    position: fixed;
@@ -134,179 +159,174 @@ main{
    grid-template-rows: 10% 70% 30%;
    align-items: center;
 
-   &__icon{
+   &__icon {
       width: 100%;
       display: flex;
       align-items: center;
       justify-content: center;
-      i{
+      i {
          font-size: 3rem;
       }
    }
-   
-   ul{
+
+   ul {
       display: flex;
       flex-direction: column;
       row-gap: 4em;
-      li{
+      li {
          transform: rotate(-91deg);
-         a{
+         a {
             font-weight: 400;
             font-size: 14px;
             color: #222;
-            font-family: 'Poppins', sans-serif;
+            font-family: "Poppins", sans-serif;
          }
       }
    }
 
-   &__links{
+   &__links {
       display: flex;
       flex-direction: column;
       align-items: center;
-      gap:1rem;
-      i{
+      gap: 1rem;
+      i {
          font-size: 2.5rem;
       }
    }
 }
 
-.active{
+.active {
    font-weight: bold;
-   color: #222;   
+   color: #222;
 }
 
-
-
-.contents{
+.contents {
    width: 100%;
-   
-   h3{
+
+   h3 {
       font-size: 100px;
       position: absolute;
       right: 1em;
       font-weight: bold;
-      top: .5em;
+      top: 0.5em;
       z-index: -1;
-      color:#dfdfdf;
-      opacity: .4;
+      color: #dfdfdf;
+      opacity: 0.4;
    }
 
-   &__header{
+   &__header {
       max-width: 1000px;
       margin: 0 auto;
       padding: 3em 0;
       width: 100%;
-      h2{
+      h2 {
          font-size: 40px;
          width: 100%;
       }
    }
 
-   img{
+   img {
       width: 500px;
-      transition: all .5s;
+      transition: all 0.5s;
    }
 
-   &__screenshot{
+   &__screenshot {
       display: grid;
       grid-template-columns: 1fr 1fr;
       gap: 1em;
-
    }
 
-   &__imgcontainer{
+   &__imgcontainer {
       height: 400px;
       display: flex;
       align-items: center;
       justify-content: center;
       // filter: grayscale(100%);
-      transition: all .5s;
+      transition: all 0.5s;
 
-      &:hover{
+      &:hover {
          //  filter: grayscale(0%);
-          img{
-              transform: scale(1.1);
-          }
+         img {
+            transform: scale(1.1);
+         }
       }
 
-      &:nth-child(1){
+      &:nth-child(1) {
          background-color: rgb(255, 214, 127);
       }
 
-       &:nth-child(2){
+      &:nth-child(2) {
          background-color: rgb(127, 182, 255);
       }
 
-      &:nth-child(3){
+      &:nth-child(3) {
          grid-column: 1/3;
          background-color: aquamarine;
       }
    }
 
-   &__about{
+   &__about {
       max-width: 1000px;
       width: 90%;
       margin: 0 auto;
       height: 500px;
       display: grid;
-      grid-template-columns: 40% 60%; 
+      grid-template-columns: 40% 60%;
       align-items: center;
       column-gap: 5em;
-      h2{
+      h2 {
          width: 100%;
       }
-      p{
+      p {
          width: 100%;
          margin: 0;
          margin-bottom: 1em;
       }
    }
 
-   &__techno{
-      
-      
+   &__techno {
    }
 
-   footer{
+   footer {
       width: 100%;
-      padding: .3em 0;
+      padding: 0.3em 0;
       background-color: #222;
       position: relative;
       color: #fff;
-      small{
+      small {
          float: right;
       }
    }
 }
 
-.next{
-     max-width: 1000px;
-      width: 90%;
-      margin: 0 auto;
-      padding: 3em 0;
+.next {
+   max-width: 1000px;
+   width: 90%;
+   margin: 0 auto;
+   padding: 3em 0;
 
-      h4{
-         font-size: 20px;
+   h4 {
+      font-size: 20px;
+   }
+
+   button {
+      bottom: 3em;
+      display: flex;
+      align-items: center;
+      column-gap: 0.5em;
+      padding: 0.5em 1.5em;
+      color: #222;
+      background-color: transparent;
+      border: none;
+      border: 2px solid #474747;
+      font-family: "Poppins";
+      font-weight: bold;
+      text-align: left;
+      word-spacing: 1px;
+      font-size: 16px;
+      margin-top: 1.5em;
+      i {
+         font-size: 2rem;
       }
-
-      button{
-         bottom: 3em;
-         display: flex;
-         align-items: center;
-         column-gap: .5em;
-         padding: .5em 1.5em;
-         color: #222;
-         background-color: transparent;
-         border: none;
-         border: 2px solid #474747;
-         font-family: 'Poppins';
-         font-weight: bold;
-         text-align: left;
-         word-spacing: 1px;
-         font-size: 16px;
-         margin-top: 1.5em;
-         i{
-            font-size: 2rem;
-         }
    }
 }
