--- a/my website creation/Portfolio/scss/works.css
+++ b/my website creation/Portfolio/scss/works.css
@@ -1,333 +1,351 @@
 * {
-  -webkit-tap-highlight-color: transparent;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  margin: 0;
-  padding: 0;
+   -webkit-tap-highlight-color: transparent;
+   -webkit-box-sizing: border-box;
+   box-sizing: border-box;
+   margin: 0;
+   padding: 0;
 }
 
 html {
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -ms-overflow-style: scrollbar;
-  font-size: 62.5%;
-  -webkit-text-size-adjust: 100%;
+   -webkit-font-smoothing: antialiased;
+   -moz-osx-font-smoothing: grayscale;
+   -ms-overflow-style: scrollbar;
+   font-size: 62.5%;
+   -webkit-text-size-adjust: 100%;
 }
 
 body {
-  font-family: 'Circular Std Book', Arial, Helvetica, sans-serif;
-  font-size: 1.6rem;
-  min-height: 100vh;
-  overflow-x: hidden;
-  line-height: 1.6;
-  color: #474747;
-  background-image: linear-gradient(33deg, transparent 0%, transparent 8%, rgba(9, 9, 9, 0.02) 8%, rgba(9, 9, 9, 0.02) 59%, transparent 59%, transparent 100%), linear-gradient(234deg, transparent 0%, transparent 32%, rgba(225, 225, 225, 0.02) 32%, rgba(225, 225, 225, 0.02) 99%, transparent 99%, transparent 100%), linear-gradient(312deg, transparent 0%, transparent 24%, rgba(93, 93, 93, 0.02) 24%, rgba(93, 93, 93, 0.02) 58%, transparent 58%, transparent 100%), linear-gradient(90deg, white, white);
+   font-family: "Circular Std Book", Arial, Helvetica, sans-serif;
+   font-size: 1.6rem;
+   min-height: 100vh;
+   overflow-x: hidden;
+   line-height: 1.6;
+   color: #474747;
+   background-image: linear-gradient(
+         33deg,
+         transparent 0%,
+         transparent 8%,
+         rgba(9, 9, 9, 0.02) 8%,
+         rgba(9, 9, 9, 0.02) 59%,
+         transparent 59%,
+         transparent 100%
+      ),
+      linear-gradient(
+         234deg,
+         transparent 0%,
+         transparent 32%,
+         rgba(225, 225, 225, 0.02) 32%,
+         rgba(225, 225, 225, 0.02) 99%,
+         transparent 99%,
+         transparent 100%
+      ),
+      linear-gradient(
+         312deg,
+         transparent 0%,
+         transparent 24%,
+         rgba(93, 93, 93, 0.02) 24%,
+         rgba(93, 93, 93, 0.02) 58%,
+         transparent 58%,
+         transparent 100%
+      ),
+      linear-gradient(90deg, white, white);
 }
 
 body:before {
-  width: 0;
-  z-index: 9999;
-  -webkit-transition: all 0.5s cubic-bezier(0.77, 0, 0.175, 1);
-  transition: all 0.5s cubic-bezier(0.77, 0, 0.175, 1);
+   width: 0;
+   z-index: 9999;
+   -webkit-transition: all 0.5s cubic-bezier(0.77, 0, 0.175, 1);
+   transition: all 0.5s cubic-bezier(0.77, 0, 0.175, 1);
 }
 
 .container {
-  max-width: 1200px;
-  width: 90%;
-  margin: 0 auto;
-}
-
-li {
-  list-style: none;
-}
-
-a {
-  text-decoration: none;
-  color: #474747;
+   max-width: 1200px;
+   width: 90%;
+   margin: 0 auto;
 }
 
 header {
-  width: 100%;
-  position: fixed;
-  top: 0;
+   width: 100%;
+   position: fixed;
+   top: 0;
 }
 
 header nav {
-  max-width: 1000px;
-  height: 10vh;
-  width: 90%;
-  margin: 0 auto;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+   max-width: 1000px;
+   height: 10vh;
+   width: 90%;
+   margin: 0 auto;
+   display: -webkit-box;
+   display: -ms-flexbox;
+   display: flex;
+   -webkit-box-align: center;
+   -ms-flex-align: center;
+   align-items: center;
+   -webkit-box-pack: justify;
+   -ms-flex-pack: justify;
+   justify-content: space-between;
 }
 
 header nav .brand {
-  font-weight: 600;
+   font-weight: 600;
 }
 
 header nav a {
-  text-decoration: none;
-  color: #474747;
-  font-size: 18px;
+   text-decoration: none;
+   color: #474747;
+   font-size: 18px;
 }
 
 header nav ul {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+   display: -webkit-box;
+   display: -ms-flexbox;
+   display: flex;
+   -webkit-box-align: center;
+   -ms-flex-align: center;
+   align-items: center;
 }
 
 header nav ul li {
-  margin-right: 1.5em;
+   margin-right: 1.5em;
 }
 
 header nav ul li button {
-  background-color: #823bc9;
-  padding: .5em 1em;
-  color: #fff;
-  border-radius: .5em;
-  border: none;
-  font-family: 'Circular Std Book', Arial, Helvetica, sans-serif;
+   background-color: #823bc9;
+   padding: 0.5em 1em;
+   color: #fff;
+   border-radius: 0.5em;
+   border: none;
+   font-family: "Circular Std Book", Arial, Helvetica, sans-serif;
 }
 
 header nav ul li i {
-  font-size: 2.5rem;
+   font-size: 2.5rem;
 }
 
 main {
-  position: relative;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  min-height: 100vh;
-  overflow: hidden;
+   position: relative;
+   display: -webkit-box;
+   display: -ms-flexbox;
+   display: flex;
+   -webkit-box-align: center;
+   -ms-flex-align: center;
+   align-items: center;
+   min-height: 100vh;
+   overflow: hidden;
 }
 
 main::before {
-  content: '';
-  position: absolute;
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  height: 50vh;
-  background-color: #222;
-  z-index: -1;
+   content: "";
+   position: absolute;
+   left: 0;
+   bottom: 0;
+   width: 100%;
+   height: 50vh;
+   background-color: #222;
+   z-index: -1;
 }
 
 main h2 {
-  width: 70%;
-  font-size: 40px;
-  line-height: 1.4;
-  font-weight: bold;
+   width: 70%;
+   font-size: 40px;
+   line-height: 1.4;
+   font-weight: bold;
 }
 
 main p {
-  width: 45%;
-  margin-top: 2.5em;
-  line-height: 1.8;
-  font-weight: 300;
-  margin-top: 4em;
+   width: 45%;
+   margin-top: 2.5em;
+   line-height: 1.8;
+   font-weight: 300;
+   margin-top: 4em;
 }
 
 main span {
-  position: absolute;
-  bottom: 0;
-  right: 1em;
-  font-size: 10rem;
-  font-weight: bold;
+   position: absolute;
+   bottom: 0;
+   right: 1em;
+   font-size: 10rem;
+   font-weight: bold;
 }
 
 main button {
-  position: absolute;
-  bottom: 3em;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-column-gap: .5em;
-          column-gap: .5em;
-  padding: 1em 0;
-  color: #fff;
-  background-color: transparent;
-  border: none;
-  font-family: 'Poppins';
-  font-weight: 500;
-  text-align: left;
-  word-spacing: 1px;
-  font-size: 16px;
+   position: absolute;
+   bottom: 3em;
+   display: -webkit-box;
+   display: -ms-flexbox;
+   display: flex;
+   -webkit-box-align: center;
+   -ms-flex-align: center;
+   align-items: center;
+   -webkit-column-gap: 0.5em;
+   column-gap: 0.5em;
+   padding: 1em 0;
+   color: #fff;
+   background-color: transparent;
+   border: none;
+   font-family: "Poppins";
+   font-weight: 500;
+   text-align: left;
+   word-spacing: 1px;
+   font-size: 16px;
 }
 
 main button i {
-  font-size: 2rem;
+   font-size: 2rem;
 }
 
 .sidebar {
-  width: 80px;
-  height: 100vh;
-  position: fixed;
-  background-color: #fff;
-  border-right: 1px solid #dfdfdf;
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-rows: 10% 70% 30%;
-      grid-template-rows: 10% 70% 30%;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+   width: 80px;
+   height: 100vh;
+   position: fixed;
+   background-color: #fff;
+   border-right: 1px solid #dfdfdf;
+   display: -ms-grid;
+   display: grid;
+   -ms-grid-rows: 10% 70% 30%;
+   grid-template-rows: 10% 70% 30%;
+   -webkit-box-align: center;
+   -ms-flex-align: center;
+   align-items: center;
 }
 
 .sidebar__icon {
-  width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+   width: 100%;
+   display: -webkit-box;
+   display: -ms-flexbox;
+   display: flex;
+   -webkit-box-align: center;
+   -ms-flex-align: center;
+   align-items: center;
+   -webkit-box-pack: center;
+   -ms-flex-pack: center;
+   justify-content: center;
 }
 
 .sidebar__icon i {
-  font-size: 3rem;
+   font-size: 3rem;
 }
 
 .sidebar ul {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  row-gap: 4em;
+   display: -webkit-box;
+   display: -ms-flexbox;
+   display: flex;
+   -webkit-box-orient: vertical;
+   -webkit-box-direction: normal;
+   -ms-flex-direction: column;
+   flex-direction: column;
+   row-gap: 4em;
 }
 
 .sidebar ul li {
-  -webkit-transform: rotate(-91deg);
-          transform: rotate(-91deg);
+   -webkit-transform: rotate(-91deg);
+   transform: rotate(-91deg);
 }
 
 .sidebar ul li a {
-  font-weight: 400;
-  font-size: 14px;
-  color: #222;
-  font-family: 'Poppins', sans-serif;
+   font-weight: 400;
+   font-size: 14px;
+   color: #222;
+   font-family: "Poppins", sans-serif;
 }
 
 .sidebar__links {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  gap: 1rem;
+   display: -webkit-box;
+   display: -ms-flexbox;
+   display: flex;
+   -webkit-box-orient: vertical;
+   -webkit-box-direction: normal;
+   -ms-flex-direction: column;
+   flex-direction: column;
+   -webkit-box-align: center;
+   -ms-flex-align: center;
+   align-items: center;
+   gap: 1rem;
 }
 
 .sidebar__links i {
-  font-size: 2.5rem;
+   font-size: 2.5rem;
 }
 
 .active {
-  font-weight: bold;
-  color: #222;
+   font-weight: bold;
+   color: #222;
 }
 
 .reveal {
-  max-width: 1100px;
-  width: 90%;
-  margin: 0 auto;
+   max-width: 1100px;
+   width: 90%;
+   margin: 0 auto;
 }
 
 .reveal p {
-  color: #c9c9c9;
+   color: #c9c9c9;
 }
 
 .reveal strong {
-  color: #a3a2a2;
-  font-weight: 300;
-  font-size: 14px;
+   color: #a3a2a2;
+   font-weight: 300;
+   font-size: 14px;
 }
 
 .reveal__main {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+   display: -webkit-box;
+   display: -ms-flexbox;
+   display: flex;
+   -webkit-box-align: center;
+   -ms-flex-align: center;
+   align-items: center;
 }
 
 .reveal__slide img {
-  height: 300px;
-  position: absolute;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
-  top: 50%;
-  left: 75%;
-  z-index: -1;
+   height: 300px;
+   position: absolute;
+   -webkit-transform: translate(-50%, -50%);
+   transform: translate(-50%, -50%);
+   top: 50%;
+   left: 75%;
+   z-index: -1;
 }
 
 .reveal__action {
-  color: #fff;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  margin-top: 1em;
-  -webkit-column-gap: 1em;
-          column-gap: 1em;
+   color: #fff;
+   display: -webkit-box;
+   display: -ms-flexbox;
+   display: flex;
+   -webkit-box-align: center;
+   -ms-flex-align: center;
+   align-items: center;
+   margin-top: 1em;
+   -webkit-column-gap: 1em;
+   column-gap: 1em;
 }
 
 .reveal__action i {
-  font-size: 3rem;
+   font-size: 3rem;
 }
 
 .reveal__dotcontain {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-column-gap: 10px;
-          column-gap: 10px;
+   display: -webkit-box;
+   display: -ms-flexbox;
+   display: flex;
+   -webkit-box-align: center;
+   -ms-flex-align: center;
+   align-items: center;
+   -webkit-column-gap: 10px;
+   column-gap: 10px;
 }
 
 .reveal__dots {
-  width: 12px;
-  height: 12px;
-  border-radius: 50%;
-  background-color: #00ff95;
+   width: 12px;
+   height: 12px;
+   border-radius: 50%;
+   background-color: #00ff95;
 }
 
 .strip {
-  height: 200px;
-  position: absolute;
-  bottom: 8em;
-  right: -1em;
+   height: 200px;
+   position: absolute;
+   bottom: 8em;
+   right: -1em;
 }
 /*# sourceMappingURL=works.css.map */
