--- a/my website creation/R3LAMP-Official-site-sample/scss/main.scss
+++ b/my website creation/R3LAMP-Official-site-sample/scss/main.scss
@@ -424,7 +424,7 @@ summary {
       p {
          font-size: var(--normal-font-size);
          line-height: 1.5em;
-         word-spacing: .16em;
+         word-spacing: 0.16em;
       }
    }
 }
@@ -643,6 +643,7 @@ summary {
 }
 
 .navbottom {
+   display: none;
    position: fixed;
    bottom: 2em;
    display: flex;
