--- a/my website creation/gaming/css/main.css
+++ b/my website creation/gaming/css/main.css
@@ -661,4 +661,210 @@ main .cirle {
 }
 
 /* For large devices */
+.overlayback {
+  position: absolute;
+  width: 100%;
+  height: 100vh;
+  top: 0;
+}
+
+.block {
+  position: absolute;
+  width: 0%;
+  height: 25vh;
+  z-index: 100;
+}
+
+.b1 {
+  top: 0;
+  background-color: #222;
+}
+
+.b2 {
+  top: 25%;
+  background-color: #222;
+}
+
+.b3 {
+  top: 50%;
+  background-color: #222;
+}
+
+.b4 {
+  top: 75%;
+  background-color: #222;
+}
+
+.b5 {
+  top: 100%;
+  background-color: #222;
+}
+
+.temp {
+  position: absolute;
+  width: 100%;
+  height: 100vh;
+  background-color: #fff;
+  -webkit-animation: fadeOut 5s linear forwards;
+          animation: fadeOut 5s linear forwards;
+  opacity: 1;
+}
+
+.firstblock {
+  position: absolute;
+  width: 0%;
+  height: 100vh;
+  background-color: #272727;
+  -webkit-animation: go-left 4s cubic-bezier(0.74, 0.6, 0.4, 0.92) forwards;
+          animation: go-left 4s cubic-bezier(0.74, 0.6, 0.4, 0.92) forwards;
+  left: 0;
+}
+
+.secondblock {
+  position: absolute;
+  width: 0%;
+  height: 100vh;
+  background-color: #b08d74;
+  -webkit-animation: go-left 3.2s cubic-bezier(0.74, 0.6, 0.4, 0.92) forwards;
+          animation: go-left 3.2s cubic-bezier(0.74, 0.6, 0.4, 0.92) forwards;
+  -webkit-animation-delay: 3s;
+          animation-delay: 3s;
+  left: 0;
+}
+
+.loaders {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+}
+
+.loaders h1 {
+  font-size: 40px;
+  font-weight: bold;
+  -webkit-animation: loadnow 4s ease-in-out forwards;
+          animation: loadnow 4s ease-in-out forwards;
+  opacity: 0;
+  -webkit-transform: translateX(0px);
+          transform: translateX(0px);
+}
+
+@-webkit-keyframes go-left {
+  0% {
+    width: 0%;
+    left: 0;
+  }
+  50% {
+    width: 100%;
+    left: 0;
+  }
+  100% {
+    width: 0%;
+    left: 100%;
+  }
+}
+
+@keyframes go-left {
+  0% {
+    width: 0%;
+    left: 0;
+  }
+  50% {
+    width: 100%;
+    left: 0;
+  }
+  100% {
+    width: 0%;
+    left: 100%;
+  }
+}
+
+@-webkit-keyframes fadeOut {
+  0% {
+    opacity: 0;
+  }
+  40% {
+    opacity: 0;
+  }
+  41% {
+    opacity: 1;
+  }
+  91% {
+    opacity: 1;
+  }
+  92% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+@keyframes fadeOut {
+  0% {
+    opacity: 0;
+  }
+  40% {
+    opacity: 0;
+  }
+  41% {
+    opacity: 1;
+  }
+  91% {
+    opacity: 1;
+  }
+  92% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+
+@-webkit-keyframes loadnow {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateX(80px);
+            transform: translateX(80px);
+  }
+  20% {
+    opacity: 1;
+    -webkit-transform: translateX(0px);
+            transform: translateX(0px);
+  }
+  80% {
+    opacity: 1;
+    -webkit-transform: translateX(0px);
+            transform: translateX(0px);
+  }
+  100% {
+    opacity: 0;
+    -webkit-transform: translateX(-80px);
+            transform: translateX(-80px);
+  }
+}
+
+@keyframes loadnow {
+  0% {
+    opacity: 0;
+    -webkit-transform: translateX(80px);
+            transform: translateX(80px);
+  }
+  20% {
+    opacity: 1;
+    -webkit-transform: translateX(0px);
+            transform: translateX(0px);
+  }
+  80% {
+    opacity: 1;
+    -webkit-transform: translateX(0px);
+            transform: translateX(0px);
+  }
+  100% {
+    opacity: 0;
+    -webkit-transform: translateX(-80px);
+            transform: translateX(-80px);
+  }
+}
 /*# sourceMappingURL=main.css.map */
