--- a/my website creation/gaming/css/main2.css
+++ b/my website creation/gaming/css/main2.css
@@ -22,7 +22,7 @@ body:before {
 }
 
 @font-face {
-  font-family: 'Avenir';
+  font-family: "Avenir";
   src: url("./assets/AvenirLTStd-Roman.otf") format("opentype");
   /* font-weight: normal; */
   /* font-display: optional; */
@@ -30,7 +30,7 @@ body:before {
 }
 
 body {
-  font-family: 'Circular Std Book', Arial, Helvetica, sans-serif;
+  font-family: "Circular Std Book", Arial, Helvetica, sans-serif;
   font-size: 1.6rem;
   min-height: 100vh;
   overflow-x: hidden;
@@ -38,8 +38,9 @@ body {
   background-image: linear-gradient(33deg, transparent 0%, transparent 8%, rgba(9, 9, 9, 0.02) 8%, rgba(9, 9, 9, 0.02) 59%, transparent 59%, transparent 100%), linear-gradient(234deg, transparent 0%, transparent 32%, rgba(225, 225, 225, 0.02) 32%, rgba(225, 225, 225, 0.02) 99%, transparent 99%, transparent 100%), linear-gradient(312deg, transparent 0%, transparent 24%, rgba(93, 93, 93, 0.02) 24%, rgba(93, 93, 93, 0.02) 58%, transparent 58%, transparent 100%), linear-gradient(90deg, white, white);
 }
 
-button, input {
-  font-family: 'Circular Std Book', Arial, Helvetica, sans-serif;
+button,
+input {
+  font-family: "Circular Std Book", Arial, Helvetica, sans-serif;
 }
 
 .reveal .show {
@@ -48,7 +49,7 @@ button, input {
 }
 
 .reveal .show::after {
-  content: '';
+  content: "";
   position: absolute;
   top: 0;
   left: 0;
@@ -101,7 +102,7 @@ main button {
   background-color: transparent;
   border: none;
   border-bottom: 2px solid #474747;
-  font-family: 'Poppins';
+  font-family: "Poppins";
   font-weight: 600;
 }
 
@@ -139,7 +140,7 @@ main button {
 }
 
 .rev-block::after {
-  content: '';
+  content: "";
   position: absolute;
   top: 0;
   left: 0;
@@ -216,5 +217,27 @@ section h2 {
 header {
   top: 0;
   left: 0;
+}
+
+.overlay {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0%;
+  z-index: 99;
+}
+
+.first {
+  background-color: #f09c00;
+}
+
+.second {
+  background-color: #f09c00;
+  left: 33.3%;
+}
+
+.third {
+  background-color: #f09c00;
+  left: 66.6%;
 }
 /*# sourceMappingURL=main2.css.map */
