--- a/my website creation/Classroom/scss/main.css
+++ b/my website creation/Classroom/scss/main.css
@@ -21,6 +21,12 @@
   --fs-primary-heading: var(--fs-800);
 }
 
+@media screen and (min-width: 50em) {
+  :root {
+    --fs-800: 2rem;
+  }
+}
+
 *,
 *::before,
 *::after {
@@ -132,16 +138,18 @@ a:not([class]) {
 }
 
 .container {
-  max-width: 90em;
+  max-width: 80em;
   width: 90%;
-  margin: 0 auto;
+  margin-inline: auto;
 }
 
 .even-columns {
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (minmax(50%, 1fr))[auto-fit];
-      grid-template-columns: repeat(auto-fit, minmax(50%, 1fr));
+  grid-auto-flow: column;
+  -ms-grid-columns: 1fr;
+      grid-template-columns: 1fr;
+  gap: 1rem;
 }
 
 .column-4 {
@@ -184,8 +192,9 @@ a:not([class]) {
           column-gap: 10px;
 }
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 32.5em) {
   .even-columns {
+    grid-auto-flow: column;
     -ms-grid-columns: 1fr;
         grid-template-columns: 1fr;
   }
@@ -194,12 +203,9 @@ a:not([class]) {
         grid-template-columns: 1fr;
   }
   .flex-space {
-    -webkit-box-align: start;
-        -ms-flex-align: start;
-            align-items: flex-start;
-    -webkit-box-pack: start;
-        -ms-flex-pack: start;
-            justify-content: flex-start;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
   .flex-align {
     display: -webkit-box;
@@ -368,6 +374,10 @@ a:not([class]) {
   padding: 1em 1.5em;
 }
 
+.code {
+  padding: 3em 0;
+}
+
 .code__card {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -419,7 +429,7 @@ a:not([class]) {
   margin-top: 1em;
 }
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 31.25em) {
   .primary__navlist {
     display: none;
   }
@@ -442,6 +452,9 @@ a:not([class]) {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
     gap: 1em;
   }
   .student .even-columns {
