--- a/my website creation/Classroom/scss/main.scss
+++ b/my website creation/Classroom/scss/main.scss
@@ -1,5 +1,5 @@
 :root {
-   --clr-primary-400: rgb(39, 37, 178);
+   --clr-primary-400: hsl(241, 66%, 42%);
    --clr-primary-300: "";
    --clr-primary-100: #fff;
 
@@ -26,11 +26,11 @@
    --fs-primary-heading: var(--fs-800);
 }
 
-// @media screen and(min-width: 50em) {
-//    :root {
-//       --fs-700: 3.5rem;
-//    }
-// }
+@media screen and(min-width: 50em) {
+   :root {
+      --fs-800: 2rem;
+   }
+}
 
 *,
 *::before,
@@ -135,14 +135,18 @@ a:not([class]) {
 }
 
 .container {
-   max-width: 90em;
+   max-width: 80em;
    width: 90%;
-   margin: 0 auto;
+   // margin: 0 auto;
+   margin-inline: auto;
 }
 
 .even-columns {
    display: grid;
-   grid-template-columns: repeat(auto-fit, minmax(50%, 1fr));
+   // grid-template-columns: repeat(auto-fit, minmax(50%, 1fr));
+   grid-auto-flow: column;
+   grid-template-columns: 1fr;
+   gap: 1rem;
 }
 
 .column-4 {
@@ -169,7 +173,7 @@ a:not([class]) {
    column-gap: 10px;
 }
 
-@media screen and(max-width: 500px) {
+@media screen and(max-width: 32.5em) {
    .even-columns {
       grid-template-columns: 1fr;
    }
@@ -179,8 +183,7 @@ a:not([class]) {
    }
 
    .flex-space {
-      align-items: flex-start;
-      justify-content: flex-start;
+      align-items: center;
    }
 
    .flex-align {
@@ -348,6 +351,7 @@ a:not([class]) {
 
 // Coding template
 .code {
+   padding: 3em 0;
    &__card {
       display: flex;
       align-items: center;
@@ -417,7 +421,7 @@ a:not([class]) {
    }
 }
 
-@media screen and(max-width: 500px) {
+@media screen and(max-width: 31.25em) {
    .primary {
       &__navlist {
          display: none;
@@ -435,6 +439,7 @@ a:not([class]) {
       width: 100%;
       .flex-space {
          flex-direction: column;
+         align-items: flex-start;
          gap: 1em;
       }
       .even-columns {
