--- a/my website creation/gaming/css/gamex.css
+++ b/my website creation/gaming/css/gamex.css
@@ -26,12 +26,10 @@
     --fs-800: 2rem;
   }
 }
-
 *,
 *::before,
 *::after {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 * {
@@ -54,8 +52,8 @@ body {
   color: #fff;
 }
 
-ul[role="list"],
-ol[role="list"] {
+ul[role=list],
+ol[role=list] {
   list-style: none;
 }
 
@@ -166,48 +164,32 @@ li {
 }
 
 .flex-align {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
   gap: 20px;
 }
 
 .flex-space {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  align-items: center;
+  justify-content: space-between;
   gap: 20px;
 }
 
 .col-2 {
-  display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (1fr)[2];
-      grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(2, 1fr);
 }
 
 .col-3 {
-  display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (minmax(30%, 1fr))[auto-fit];
-      grid-template-columns: repeat(auto-fit, minmax(30%, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(30%, 1fr));
   gap: 20px;
 }
 
 .col-6 {
-  display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (minmax(10%, 1fr))[auto-fit];
-      grid-template-columns: repeat(auto-fit, minmax(10%, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(10%, 1fr));
   gap: 20px;
 }
 
@@ -231,49 +213,40 @@ header {
   background-color: var(--clr-bg);
   z-index: 100;
 }
-
 header .nav {
   width: 100%;
   padding: 1em 0;
   border-bottom: 2px solid #38ef7d;
   position: relative;
 }
-
 header .nav__company a {
-  -webkit-column-gap: 5px;
-          column-gap: 5px;
+  -moz-column-gap: 5px;
+       column-gap: 5px;
 }
-
 header .nav__company span {
   color: var(--btn-primary);
-  -webkit-column-gap: 5px;
-          column-gap: 5px;
+  -moz-column-gap: 5px;
+       column-gap: 5px;
 }
-
 header .nav__company span i {
   color: var(--clr-neon-primary);
 }
-
 header .nav__search {
   width: 300px;
   background-color: rgba(255, 255, 255, 0.1);
   border-radius: 25px;
   padding: 0.2em 1em;
 }
-
 header .nav__search input {
   width: 100%;
 }
-
 header .nav__search i {
   opacity: 0.4;
 }
-
 header .nav__shop {
   position: relative;
   font-size: var(--fs-600);
 }
-
 header .nav__shop span {
   position: absolute;
   top: -1em;
@@ -284,7 +257,6 @@ header .nav__shop span {
   text-align: center;
   background-color: var(--btn-primary);
 }
-
 header .nav__imgcontainer {
   width: 35px;
   height: 35px;
@@ -292,7 +264,6 @@ header .nav__imgcontainer {
   position: relative;
   border: 2px solid var(--clr-bg);
 }
-
 header .nav__imgcontainer:after {
   content: "";
   position: absolute;
@@ -304,7 +275,6 @@ header .nav__imgcontainer:after {
   border-radius: 50%;
   z-index: -1;
 }
-
 header .nav__imgcontainer img {
   width: 100%;
   height: 100%;
@@ -316,13 +286,11 @@ header .nav__imgcontainer img {
 .menu {
   text-align: center;
 }
-
 .menu li {
   padding: 1em 0;
   margin: 0 1.5em;
   color: var(--clr-secondary);
 }
-
 .menu .active {
   color: var(--clr-light);
   border-bottom: 2px solid var(--clr-neon-primary);
@@ -333,7 +301,6 @@ header .nav__imgcontainer img {
   padding: 0 2em;
   margin-bottom: 2em;
 }
-
 .title::after {
   position: absolute;
   content: "";
@@ -344,29 +311,24 @@ header .nav__imgcontainer img {
   border-radius: 0.5em;
   background-color: var(--btn-primary);
 }
-
 .title .active {
   position: relative;
   color: var(--clr-light);
   font-weight: var(--fw-bold);
 }
-
 .title .active::before {
   content: "";
   position: absolute;
   width: 40%;
   height: 2px;
   left: 50%;
-  -webkit-transform: translateX(-50%);
-          transform: translateX(-50%);
+  transform: translateX(-50%);
   background-color: var(--clr-neon-primary);
   bottom: -1em;
 }
-
 .title__status small {
   color: var(--btn-primary);
 }
-
 .title__tab li {
   padding: 0em 1em;
 }
@@ -378,117 +340,93 @@ main {
 .content {
   padding: 2em;
 }
-
 .content__num {
   position: relative;
   width: 60px;
   height: 60px;
 }
-
 .content__num svg {
   position: relative;
   width: 60px;
   height: 60px;
 }
-
 .content__num svg circle {
   fill: none;
   stroke-width: 3;
   stroke: var(--clr-neon-primary);
-  -webkit-transform: translate(5px, 5px);
-          transform: translate(5px, 5px);
+  transform: translate(5px, 5px);
   stroke-dasharray: 200;
   stroke-dashoffset: 200;
 }
-
 .content__num svg circle:nth-child(1) {
   stroke-dashoffset: 0;
   stroke: var(--clr-secondary);
 }
-
 .content__num svg circle:nth-child(2) {
-  stroke-dashoffset: calc(200 - (200 * 70) / 100);
+  stroke-dashoffset: 60;
   stroke: var(--clr-neon-primary);
 }
-
 .content__num span {
   position: absolute;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
   top: 50%;
   left: 50%;
 }
-
 .content__imgcontainer {
   width: 95%;
-  aspect-ratio: 1 / 1;
+  aspect-ratio: 1/1;
 }
-
 .content__imgcontainer img {
   width: 100%;
   height: 100%;
   -o-object-fit: cover;
      object-fit: cover;
 }
-
 .content__logos {
   padding: 0.5em 1em;
 }
-
 .content__logos img {
   width: 90px;
-  -webkit-filter: grayscale(100%);
-          filter: grayscale(100%);
+  filter: grayscale(100%);
 }
-
 .content__rate {
-  -webkit-column-gap: 5px;
-          column-gap: 5px;
+  -moz-column-gap: 5px;
+       column-gap: 5px;
 }
-
 .content__star {
   color: var(--clr-neon-primary);
-  -webkit-column-gap: 5px;
-          column-gap: 5px;
+  -moz-column-gap: 5px;
+       column-gap: 5px;
 }
-
 .content__genre {
   padding: 0.6em 1em;
 }
-
 .content__genre span {
   padding: 0.1em 1em;
   font-size: var(--fs-300);
   background-color: rgba(255, 255, 255, 0.1);
 }
-
 .content__summary {
   padding: 0.5em 1em;
   max-height: 30vh;
   overflow-y: scroll;
 }
-
 .content__summary::-webkit-scrollbar {
   width: 2px;
 }
-
 .content__summary::-webkit-scrollbar-thumb {
   background-color: var(--clr-neon-primary);
   border-radius: 25px;
 }
-
 .content__summary::-webkit-scrollbar-button {
   height: 5px;
 }
-
 .content__others {
   padding: 1.2em 1em;
 }
-
 .content__buy {
   padding: 0.5em;
 }
-
 .content__buy button {
   width: 140px;
   padding: 1em 2em;
@@ -500,59 +438,45 @@ main {
 .screen {
   margin-bottom: 2em;
 }
-
 .screen__imgcontainer img {
-  -webkit-transition: all 0.5s;
   transition: all 0.5s;
 }
-
 .screen__imgcontainer:hover img {
-  -webkit-transform: scale(1.1);
-          transform: scale(1.1);
+  transform: scale(1.1);
 }
 
 .add {
   padding: 1em 0 3em;
 }
-
 .add__boxshadow {
   position: absolute;
   inset: 0;
-  background-image: -webkit-gradient(linear, left bottom, left top, from(#222), to(transparent));
   background-image: linear-gradient(0deg, #222, transparent);
   padding: 2em 2em;
   top: 44%;
-  -webkit-transition: all 0.5s;
   transition: all 0.5s;
 }
-
 .add__boxshadow p {
   opacity: 0;
-  -webkit-transition: all 0.5s;
   transition: all 0.5s;
 }
-
 .add__boxshadow:hover {
   background-color: rgba(34, 34, 34, 0.4);
   padding: 3em 2em;
   top: 0%;
 }
-
 .add__boxshadow:hover p {
   opacity: 1;
 }
-
 .add__boxshadow:hover button {
   background-color: var(--btn-primary);
 }
-
 .add__details {
   position: relative;
   width: 100%;
   height: 250px;
   overflow: hidden;
 }
-
 .add img {
   position: absolute;
   width: 100%;
@@ -560,7 +484,6 @@ main {
   -o-object-fit: cover;
      object-fit: cover;
 }
-
 .add__action {
   position: absolute;
   width: 100%;
@@ -568,23 +491,15 @@ main {
   z-index: 50;
   padding: 0.5em 2em;
 }
-
 .add__action button {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  align-items: center;
+  justify-content: center;
   width: 40px;
   height: 40px;
   border-radius: 50%;
   color: #fff;
   font-size: 1.2rem;
-  -webkit-transition: all 0.5s;
   transition: all 0.5s;
   background-color: rgba(255, 255, 255, 0.2);
 }
@@ -592,31 +507,26 @@ main {
 .popular {
   padding: 2em 0 10em;
 }
-
 .popular__card {
   height: 500px;
   border-bottom: 2px solid var(--clr-neon-primary);
   background-color: rgba(97, 97, 97, 0.1);
   position: relative;
 }
-
 .popular__card::before {
   content: "";
   position: absolute;
   width: 100%;
   inset: 0;
   height: 100%;
-  background-image: -webkit-gradient(linear, left bottom, left top, color-stop(40%, #101a23), color-stop(60%, transparent));
-  background-image: linear-gradient(0deg, #101a23 40%, transparent 60%);
+  background-image: linear-gradient(0deg, hsl(210deg, 36%, 10%) 40%, transparent 60%);
 }
-
 .popular img {
   width: 100%;
   -o-object-fit: cover;
      object-fit: cover;
   height: 300px;
 }
-
 .popular__details {
   width: 100%;
   position: absolute;
@@ -624,23 +534,18 @@ main {
   bottom: 0;
   z-index: 50;
 }
-
 .popular__details .avail {
   color: var(--clr-neon-primary);
 }
-
 .popular__details .unavail {
   color: crimson;
 }
-
 .popular__para {
   padding: 1em 0 2em;
 }
-
 .popular h1 {
   font-size: 1.5rem;
 }
-
 .popular button {
   position: absolute;
   width: 150px;
@@ -655,16 +560,13 @@ main {
 .foot {
   gap: 30px;
 }
-
 .foot__social {
   color: var(--btn-primary);
   gap: 10px;
 }
-
 .foot__padd, .foot__lang {
   padding: 2em 0;
 }
-
 .foot__lang button {
   width: 150px;
   padding: 0.8em 0;
@@ -672,38 +574,31 @@ main {
   font-weight: var(--fw-bold);
   border-radius: 25px;
 }
-
 .foot__tweet {
   background-color: var(--btn-primary);
   padding: 2em;
 }
-
 .foot__header .flex-align {
-  -webkit-column-gap: 10px;
-          column-gap: 10px;
+  -moz-column-gap: 10px;
+       column-gap: 10px;
 }
-
 .foot__imgcontain {
   width: 45px;
   height: 45px;
   overflow: hidden;
   border-radius: 50%;
 }
-
 .foot__imgcontain img {
   width: 100%;
   height: 100%;
   -o-object-fit: cover;
      object-fit: cover;
 }
-
 .foot__message {
   background-color: rgba(34, 34, 34, 0.3);
   padding: 1.5em;
   margin-top: 0.5em;
 }
-
 .foot__cons {
   margin-top: 10px;
-}
-/*# sourceMappingURL=gamex.css.map */
+}/*# sourceMappingURL=gamex.css.map */
