--- a/my website creation/gaming/css/main.css
+++ b/my website creation/gaming/css/main.css
@@ -50,11 +50,9 @@
     --smaller-font-size: 0.813rem;
   }
 }
-
 /*=============== BASE ===============*/
 * {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   padding: 0;
   margin: 0;
 }
@@ -72,7 +70,6 @@ input {
 body {
   background-color: var(--body-color);
   color: var(--text-color);
-  -webkit-transition: 0.4s;
   transition: 0.4s;
   font-family: var(--body-font);
 }
@@ -112,27 +109,19 @@ button {
 }
 
 .grid {
-  display: -ms-grid;
   display: grid;
 }
 
 .flex {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
 }
 
 /*=============== NAV ===============*/
 .nav {
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: space-between;
+  align-items: center;
   height: var(--header-height);
 }
-
 .nav__logo {
   place-items: center;
   width: 60px;
@@ -141,30 +130,21 @@ button {
   color: var(--button-color-alt);
   font-weight: var(--font-semi-bold);
 }
-
 .nav__header {
   gap: 1em;
 }
-
 .nav ul {
   gap: 1.2rem;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
 }
-
 .nav ul a {
   color: var(--text-color-light);
 }
-
 .nav__box {
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
   padding: 0 0.5em;
   background-color: var(--first-color-alt);
 }
-
 .nav__box input {
   background-color: transparent;
   outline: none;
@@ -173,76 +153,55 @@ button {
   color: var(--clr-light);
   font-size: var(--small-font-size);
 }
-
-.nav__box input::-webkit-input-placeholder {
+.nav__box input::-moz-placeholder {
   color: #f5f5f5;
 }
-
 .nav__box input:-ms-input-placeholder {
   color: #f5f5f5;
 }
-
-.nav__box input::-ms-input-placeholder {
-  color: #f5f5f5;
-}
-
 .nav__box input::placeholder {
   color: #f5f5f5;
 }
-
 .nav__action {
   gap: 1em;
 }
-
 .nav__action button {
   padding: 0.5em 1.5em;
   border-radius: 20px;
   font-size: var(--small-font-size);
 }
-
 .nav__action .sign {
-  background-image: -webkit-gradient(linear, right top, left top, from(#2045d9), color-stop(#3d55f0), to(#3d55f0));
-  background-image: linear-gradient(to left, #2045d9, #3d55f0, #3d55f0);
+  background-image: linear-gradient(to left, hsl(228deg, 74%, 49%), hsl(232deg, 86%, 59%), hsl(232deg, 86%, 59%));
   color: var(--clr-light);
 }
-
 .nav__action .log {
   background-color: var(--first-color-alt);
   color: var(--clr-light);
 }
 
 .title {
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
   height: 85vh;
 }
-
 .title__title span {
   color: var(--button-color-alt);
   font-weight: var(--font-semi-bold);
 }
-
 .title__title h1 {
   font-size: var(--h1-font-size);
   font-weight: bold;
   color: #fff;
   margin-bottom: var(--mb-2);
 }
-
 .title__title button {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   place-items: center;
   gap: 1em;
-  background-image: -webkit-gradient(linear, right top, left top, from(#2045d9), color-stop(#3d55f0), to(#3d55f0));
-  background-image: linear-gradient(to left, #2045d9, #3d55f0, #3d55f0);
+  background-image: linear-gradient(to left, hsl(228deg, 74%, 49%), hsl(232deg, 86%, 59%), hsl(232deg, 86%, 59%));
   color: var(--clr-light);
   padding: 0.5em 2em;
   border-radius: 1em;
 }
-
 .title__title button .icons {
   color: var(--clr-light) !important;
 }
@@ -252,7 +211,6 @@ main {
   position: relative;
   min-height: 100vh;
 }
-
 main .backimg {
   position: absolute;
   width: 100%;
@@ -261,55 +219,44 @@ main .backimg {
   -o-object-fit: cover;
      object-fit: cover;
   z-index: -1;
-  -webkit-box-shadow: 0 0 10px 10px var(--body-color) inset;
-          box-shadow: 0 0 10px 10px var(--body-color) inset;
+  box-shadow: 0 0 10px 10px var(--body-color) inset;
   opacity: 0.4;
 }
-
 main .cirle {
   position: absolute;
   width: 100%;
   height: 100vh;
   z-index: -1;
-  -webkit-box-shadow: 0 0px 100px 100px var(--body-color) inset;
-          box-shadow: 0 0px 100px 100px var(--body-color) inset;
+  box-shadow: 0 0px 100px 100px var(--body-color) inset;
 }
 
 /*=============== CURRENT GAMES ===============*/
 .current {
   margin-bottom: 8em;
 }
-
 .current__header {
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  justify-content: space-between;
   margin-bottom: var(--mb-2);
 }
-
 .current__header h2 {
   font-size: var(--h2-font-size);
   color: #fff;
 }
-
 .current__header button {
   background-color: var(--first-color-alt);
   color: var(--clr-light);
   padding: 0.5em 1em;
   border-radius: 10px;
 }
-
 .current__container {
   width: 100%;
   gap: 2rem;
 }
-
 .current__card {
   width: 200px;
   text-align: center;
   color: var(--clr-light);
 }
-
 .current__card img {
   left: 0;
   position: absolute;
@@ -318,38 +265,29 @@ main .cirle {
   height: 100%;
   border-radius: 0.5em;
 }
-
 .current__card p {
   font-size: var(--small-font-size);
 }
-
 .current__imgcontainer {
   position: relative;
   height: 250px;
   margin-bottom: var(--mb-0-5);
-  -webkit-transition: 0.5s;
   transition: 0.5s;
 }
-
 .current__imgcontainer .span {
   position: absolute;
   z-index: 1;
   opacity: 0;
   left: 50%;
   top: 50%;
-  -webkit-transform: translate(-50%, -50%) scale(2);
-          transform: translate(-50%, -50%) scale(2);
+  transform: translate(-50%, -50%) scale(2);
 }
-
 .current__imgcontainer::after {
-  -webkit-transition: 0.5s;
   transition: 0.5s;
 }
-
 .current__imgcontainer:hover::after {
   content: "";
   position: absolute;
-  -webkit-transition: 0.5s;
   transition: 0.5s;
   top: 0;
   left: 0;
@@ -358,7 +296,6 @@ main .cirle {
   background-color: var(--button-color-alt);
   opacity: 0.6;
 }
-
 .current__imgcontainer:hover .span {
   opacity: 1;
 }
@@ -369,7 +306,6 @@ main .cirle {
   height: 70vh;
   margin-bottom: 11em;
 }
-
 .article .backimg {
   position: absolute;
   width: 100%;
@@ -377,50 +313,38 @@ main .cirle {
   -o-object-fit: cover;
      object-fit: cover;
   z-index: -1;
-  -webkit-box-shadow: 0 0 10px 10px var(--body-color) inset;
-          box-shadow: 0 0 10px 10px var(--body-color) inset;
+  box-shadow: 0 0 10px 10px var(--body-color) inset;
   opacity: 0.4;
 }
-
 .article .cirle {
   position: absolute;
   width: 100%;
   height: 70vh;
   z-index: -1;
-  -webkit-box-shadow: 0 0px 100px 100px var(--body-color) inset;
-          box-shadow: 0 0px 100px 100px var(--body-color) inset;
+  box-shadow: 0 0px 100px 100px var(--body-color) inset;
 }
-
 .article__header {
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  justify-content: space-between;
   margin-bottom: var(--mb-2);
 }
-
 .article__header h2 {
   color: #fff;
   font-size: var(--h2-font-size);
 }
-
 .article__header button {
   background-color: var(--first-color-alt);
   color: var(--clr-light);
   padding: 0.5em 1em;
   border-radius: 10px;
 }
-
 .article__container {
-  -ms-grid-columns: 1.4fr 1fr;
-      grid-template-columns: 1.4fr 1fr;
+  grid-template-columns: 1.4fr 1fr;
   gap: 1em;
 }
-
 .article .logo {
   width: 40px;
   height: 40px;
 }
-
 .article .mainimg {
   position: absolute;
   -o-object-fit: cover;
@@ -429,72 +353,55 @@ main .cirle {
   height: 100%;
   z-index: 0;
 }
-
 .article__card {
   gap: 1em;
 }
-
 .article__card:nth-child(1) {
   height: 450px;
-  -ms-grid-row: 1;
-      grid-row-start: 1;
+  grid-row-start: 1;
   grid-row-end: 3;
   position: relative;
 }
-
 .article__card:nth-child(2) {
   position: relative;
   overflow: hidden;
-  -ms-grid-column: 2;
-      grid-column-start: 2;
+  grid-column-start: 2;
   grid-column-end: 2;
 }
-
 .article__card:nth-child(3) {
   position: relative;
 }
-
 .article__app {
   position: absolute;
   top: 1em;
   left: 1em;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
   gap: 1em;
   z-index: 1;
 }
-
 .article__content {
   position: absolute;
-  -webkit-box-align: end;
-      -ms-flex-align: end;
-          align-items: flex-end;
+  align-items: flex-end;
   gap: 1em;
   bottom: 0;
   z-index: 1;
 }
-
 .article__para {
   padding: 1em 0;
 }
-
 .article__para:hover h5 {
   text-decoration: underline;
   cursor: pointer;
 }
-
 .article__para h5 {
   font-size: var(--h4-font-size);
   margin-bottom: var(--mb-0-5);
   color: #fff;
 }
-
 .article__para p {
   color: var(--text-color-light);
   font-size: var(--small-font-size);
 }
-
 .article__subpic {
   width: 120px;
   height: 200px;
@@ -502,15 +409,12 @@ main .cirle {
      object-fit: cover;
   border-radius: 0 10px 0 0;
 }
-
 .article__stream {
   color: var(--clr-light);
 }
-
 .article__stream span {
   font-size: var(--small-font-size);
 }
-
 .article .sub {
   width: 80px !important;
   height: 120px !important;
@@ -520,117 +424,89 @@ main .cirle {
 }
 
 .new__header {
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  justify-content: space-between;
   margin-bottom: var(--mb-2);
 }
-
 .new__header h2 {
   color: #fff;
   font-size: var(--h2-font-size);
 }
-
 .new__header button {
   background-color: var(--first-color-alt);
   color: var(--clr-light);
   padding: 0.5em 1em;
   border-radius: 10px;
 }
-
 .new__icons {
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
   gap: 1em;
 }
-
 .new__container {
-  -ms-grid-columns: 1.6fr 1fr;
-      grid-template-columns: 1.6fr 1fr;
+  grid-template-columns: 1.6fr 1fr;
   gap: 2em;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
+  align-items: flex-start;
 }
-
 .new__card {
   gap: 1em;
   margin-bottom: var(--mb-2);
 }
-
 .new__device {
   width: 80px;
   gap: 1em;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
   background-color: var(--first-color-alt);
   padding: 0.5em 1em;
   color: #fff;
 }
-
 .new__image {
   width: 400px;
   height: 300px;
 }
-
 .new__image img {
   height: 100%;
   border-radius: 1em;
   -o-object-fit: cover;
      object-fit: cover;
 }
-
 .new__content {
   position: relative;
   height: 300px;
 }
-
 .new__content h2 {
   margin-top: 1em;
   color: #fff;
   margin-bottom: var(--mb-0-5);
   font-size: var(--h3-font-size);
 }
-
 .new__content p {
   color: var(--text-color-light);
   font-size: var(--small-font-size);
 }
-
 .new__app {
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
   position: absolute;
   gap: 1em;
   bottom: 1em;
   color: var(--text-color-light);
 }
-
 .new__app img {
   width: 30px;
 }
-
 .new__letter {
   background-color: #212045;
   padding: 1.2em;
   border-radius: 10px;
 }
-
 .new__letter h4 {
   font-size: var(--h3-font-size);
   margin-bottom: var(--mb-1);
   color: #fff;
 }
-
 .new__letter p {
   color: var(--text-color-light);
   font-size: var(--small-font-size);
   margin-bottom: var(--mb-1);
 }
-
 .new__letter input {
   background-color: var(--first-color-alt);
   border: none;
@@ -638,22 +514,15 @@ main .cirle {
   color: var(--text-color-light);
   margin-bottom: var(--mb-2);
 }
-
 .new__letter button {
-  background-image: -webkit-gradient(linear, right top, left top, from(#2045d9), color-stop(#3d55f0), to(#3d55f0));
-  background-image: linear-gradient(to left, #2045d9, #3d55f0, #3d55f0);
+  background-image: linear-gradient(to left, hsl(228deg, 74%, 49%), hsl(232deg, 86%, 59%), hsl(232deg, 86%, 59%));
   color: var(--clr-light);
   padding: 0.5em 1.5em;
   border-radius: 10px;
 }
-
 .new__icons2 {
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  justify-content: center;
+  align-items: center;
   background-color: var(--body-color);
   width: 50px;
   height: 50px;
@@ -736,18 +605,15 @@ main .cirle {
   position: absolute;
   top: 50%;
   left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
 }
-
 .loaders h1 {
   font-size: 40px;
   font-weight: bold;
   -webkit-animation: loadnow 4s ease-in-out forwards;
           animation: loadnow 4s ease-in-out forwards;
   opacity: 0;
-  -webkit-transform: translateX(0px);
-          transform: translateX(0px);
+  transform: translateX(0px);
 }
 
 @-webkit-keyframes go-left {
@@ -779,7 +645,6 @@ main .cirle {
     left: 100%;
   }
 }
-
 @-webkit-keyframes fadeOut {
   0% {
     opacity: 0;
@@ -800,7 +665,6 @@ main .cirle {
     opacity: 0;
   }
 }
-
 @keyframes fadeOut {
   0% {
     opacity: 0;
@@ -821,50 +685,39 @@ main .cirle {
     opacity: 0;
   }
 }
-
 @-webkit-keyframes loadnow {
   0% {
     opacity: 0;
-    -webkit-transform: translateX(80px);
-            transform: translateX(80px);
+    transform: translateX(80px);
   }
   20% {
     opacity: 1;
-    -webkit-transform: translateX(0px);
-            transform: translateX(0px);
+    transform: translateX(0px);
   }
   80% {
     opacity: 1;
-    -webkit-transform: translateX(0px);
-            transform: translateX(0px);
+    transform: translateX(0px);
   }
   100% {
     opacity: 0;
-    -webkit-transform: translateX(-80px);
-            transform: translateX(-80px);
+    transform: translateX(-80px);
   }
 }
-
 @keyframes loadnow {
   0% {
     opacity: 0;
-    -webkit-transform: translateX(80px);
-            transform: translateX(80px);
+    transform: translateX(80px);
   }
   20% {
     opacity: 1;
-    -webkit-transform: translateX(0px);
-            transform: translateX(0px);
+    transform: translateX(0px);
   }
   80% {
     opacity: 1;
-    -webkit-transform: translateX(0px);
-            transform: translateX(0px);
+    transform: translateX(0px);
   }
   100% {
     opacity: 0;
-    -webkit-transform: translateX(-80px);
-            transform: translateX(-80px);
+    transform: translateX(-80px);
   }
-}
-/*# sourceMappingURL=main.css.map */
+}/*# sourceMappingURL=main.css.map */
