--- a/my website creation/gaming/css/main2.css
+++ b/my website creation/gaming/css/main2.css
@@ -1,7 +1,6 @@
 * {
   -webkit-tap-highlight-color: transparent;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   margin: 0;
   padding: 0;
 }
@@ -17,7 +16,6 @@ html {
 body:before {
   width: 0;
   z-index: 9999;
-  -webkit-transition: all 0.5s cubic-bezier(0.77, 0, 0.175, 1);
   transition: all 0.5s cubic-bezier(0.77, 0, 0.175, 1);
 }
 
@@ -28,14 +26,13 @@ body:before {
   /* font-display: optional; */
   /* font-style: normal; */
 }
-
 body {
   font-family: "Circular Std Book", Arial, Helvetica, sans-serif;
   font-size: 1.6rem;
   min-height: 100vh;
   overflow-x: hidden;
   line-height: 1.6;
-  background-image: linear-gradient(33deg, transparent 0%, transparent 8%, rgba(9, 9, 9, 0.02) 8%, rgba(9, 9, 9, 0.02) 59%, transparent 59%, transparent 100%), linear-gradient(234deg, transparent 0%, transparent 32%, rgba(225, 225, 225, 0.02) 32%, rgba(225, 225, 225, 0.02) 99%, transparent 99%, transparent 100%), linear-gradient(312deg, transparent 0%, transparent 24%, rgba(93, 93, 93, 0.02) 24%, rgba(93, 93, 93, 0.02) 58%, transparent 58%, transparent 100%), linear-gradient(90deg, white, white);
+  background-image: linear-gradient(33deg, transparent 0%, transparent 8%, rgba(9, 9, 9, 0.02) 8%, rgba(9, 9, 9, 0.02) 59%, transparent 59%, transparent 100%), linear-gradient(234deg, transparent 0%, transparent 32%, rgba(225, 225, 225, 0.02) 32%, rgba(225, 225, 225, 0.02) 99%, transparent 99%, transparent 100%), linear-gradient(312deg, transparent 0%, transparent 24%, rgba(93, 93, 93, 0.02) 24%, rgba(93, 93, 93, 0.02) 58%, transparent 58%, transparent 100%), linear-gradient(90deg, rgb(255, 255, 255), rgb(255, 255, 255));
 }
 
 button,
@@ -47,7 +44,6 @@ input {
   position: relative;
   overflow: hidden;
 }
-
 .reveal .show::after {
   content: "";
   position: absolute;
@@ -59,11 +55,9 @@ input {
   -webkit-animation: rev-block 1.5s cubic-bezier(0.19, 1, 0.22, 1) forwards;
           animation: rev-block 1.5s cubic-bezier(0.19, 1, 0.22, 1) forwards;
 }
-
 .reveal .show span {
   display: inline-block;
-  -webkit-transform: translateY(100%);
-          transform: translateY(100%);
+  transform: translateY(100%);
 }
 
 .sideback {
@@ -90,12 +84,10 @@ main h2 {
   line-height: 1.5;
   font-weight: bold;
 }
-
 main p {
   width: 60%;
   margin-bottom: 1.5rem;
 }
-
 main button {
   padding: 1em 1.5em;
   color: #474747;
@@ -109,19 +101,10 @@ main button {
 .container {
   max-width: 968px;
   height: 100vh;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  align-items: flex-start;
+  flex-direction: column;
+  justify-content: center;
   width: 90%;
   margin: 0 auto;
 }
@@ -130,7 +113,6 @@ main button {
   position: relative;
   font-size: 50px;
 }
-
 .rev-block span {
   opacity: 0;
   -webkit-animation: appear-text 0.0001s linear forwards;
@@ -138,7 +120,6 @@ main button {
   -webkit-animation-delay: 1.4s;
           animation-delay: 1.4s;
 }
-
 .rev-block::after {
   content: "";
   position: absolute;
@@ -182,7 +163,6 @@ main button {
     width: 0%;
   }
 }
-
 @-webkit-keyframes appear-text {
   0% {
     opacity: 0;
@@ -191,7 +171,6 @@ main button {
     opacity: 1;
   }
 }
-
 @keyframes appear-text {
   0% {
     opacity: 0;
@@ -200,7 +179,6 @@ main button {
     opacity: 1;
   }
 }
-
 .backdown {
   width: 100%;
   height: 40vh;
@@ -239,5 +217,4 @@ header {
 .third {
   background-color: #f09c00;
   left: 66.6%;
-}
-/*# sourceMappingURL=main2.css.map */
+}/*# sourceMappingURL=main2.css.map */
