--- a/my website creation/gaming/css/nav.scss
+++ b/my website creation/gaming/css/nav.scss
@@ -1,101 +1,111 @@
-*{
-      -webkit-tap-highlight-color: transparent;
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
+* {
+   -webkit-tap-highlight-color: transparent;
+   box-sizing: border-box;
+   margin: 0;
+   padding: 0;
 }
 
 html {
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    -ms-overflow-style: scrollbar;
-    font-size: 62.5%;
-    -webkit-text-size-adjust: 100%;
+   -webkit-font-smoothing: antialiased;
+   -moz-osx-font-smoothing: grayscale;
+   -ms-overflow-style: scrollbar;
+   font-size: 62.5%;
+   -webkit-text-size-adjust: 100%;
 }
 body:before {
-    width: 0;
-    z-index: 9999;
-    transition: all .5s cubic-bezier(.77,0,.175,1);
-}
-   
-body{
-      font-family: 'Circular Std Book', Arial, Helvetica, sans-serif;
-      font-size: 1.6rem;
-      min-height: 100vh;
-      overflow-x: hidden;
-      line-height: 1.6;
-      background-color: #f5f5f5;
+   width: 0;
+   z-index: 9999;
+   transition: all 0.5s cubic-bezier(0.77, 0, 0.175, 1);
 }
 
-section{
-    width: 100%;
-    min-height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: absolute;
-    h1{
-        font-size: 50px;
-    }
+body {
+   font-family: "Circular Std Book", Arial, Helvetica, sans-serif;
+   font-size: 1.6rem;
+   min-height: 100vh;
+   overflow-x: hidden;
+   line-height: 1.6;
+   background-color: #f5f5f5;
 }
 
-
-.menu-overlay{
-    position: absolute;
-    width: 100%;
-    height: 100vh;
+section {
+   width: 100%;
+   min-height: 100vh;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   position: absolute;
+   h1 {
+      font-size: 50px;
+   }
 }
 
-.block{
-    position: absolute;
-    width: 0%;
-    height: 100vh;
-    background-color: #222;
+.menu-overlay {
+   position: absolute;
+   width: 100%;
+   height: 100vh;
 }
 
-.b1{ left: 0; }
-.b2{ left: 25%; }
-.b3{ left: 50%; }
-.b4{ left: 75%; }
-
-
-.strip{
-    position: absolute;
-    width: 1px;
-    height: 100vh;
-    // background-color: #f5f5f5;
+.block {
+   position: absolute;
+   width: 0%;
+   height: 100vh;
+   background-color: #222;
 }
 
-.one{ left: 25%; }
-.two{ left: 50%; }
-.three{ left: 75%; }
-
-ul{
-    margin: 0;
-    padding: 0;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
-    z-index: 1;
-    list-style: none;
-
-    li{
-        padding: 1em 0;
-        color: #fff;
-        font-size: 35px;
-    }
+.b1 {
+   left: 0;
+}
+.b2 {
+   left: 25%;
+}
+.b3 {
+   left: 50%;
+}
+.b4 {
+   left: 75%;
 }
 
-
-.menu-btn{
-    position: fixed;
-    right: 0;
-    margin: 1.2em;
-    span{
-        color: #fff;
-        padding: 1em;
-    }
+.strip {
+   position: absolute;
+   width: 1px;
+   height: 100vh;
+   // background-color: #f5f5f5;
 }
 
+.one {
+   left: 25%;
+}
+.two {
+   left: 50%;
+}
+.three {
+   left: 75%;
+}
+
+ul {
+   margin: 0;
+   padding: 0;
+   position: absolute;
+   top: 50%;
+   left: 50%;
+   transform: translate(-50%, -50%);
+   text-align: center;
+   z-index: 1;
+   list-style: none;
+
+   li {
+      padding: 1em 0;
+      color: #fff;
+      font-size: 35px;
+   }
+}
+
+.menu-btn {
+   position: fixed;
+   right: 0;
+   margin: 1.2em;
+   span {
+      color: #222;
+      padding: 1em;
+   }
+}
